# hil-based-rail-manipulation

./: README.md
arm_control/: CMakeLists.txt  package.xml  setup.py
arm_control/arm_control/: gripper copy.py  gripper.py  gripper_7_29_13_00.py  robot_arm_node.py  robot_arm_node_7_23.py  robot_arm_node_7_26.py  robot_arm_node_7_29_13_00.py  robotarm_sdk.py  robotarm_sdk_old.py
arm_control/config/: constants.yaml
arm_control/launch/: dual_arm_control.launch.py  left_arm_control.launch.py  right_arm_control.launch.py
arm_control/msg/: ControlCommand.msg
arm_control/srv/: GripperControl.srv  SetGripperParam.srv  SetGripperPosition.srv
examples/experiments/pick_ironroad/: README.md  config.py  deploy.py  run_actor.sh  run_learner.sh  wrapper.py
examples1/experiments/pick_ironroad/: README.md
examples2/experiments/pick_ironroad/: README.md  config.py  run_actor.sh  run_learner.sh  wrapper.py
examples3.1/experiments/pick_ironroad/: start_deployment.sh  wrapper.py
examples3/experiments/: config.py
examples3/experiments/pick_ironroad/: config.py  deploy.py  wrapper.py
serl_robot_infra/robot_servers/: ironroad_server.py
